# pokejax

./: .gitignore  ANALYSIS_local_heuristic_winrate.md  ANALYSIS_winrate_gap.md  PLAN.md  QUESTIONS_FOR_USER.md  pyproject.toml  training_log.txt
.jax_cache/: jit__eval_state-5bc5e8f68e869c747bf6c1adc805c6fe2c94e5a873923c28aaa849e1c5481e1b-cache  jit__forward-8c5d1140f95638b71db3bd97d73c06e7a9423a14cae10932034a98901c322591-cache  jit__randint-669d85e2aa2dd0cf3c598054f9d5ac0f3789c537b43c03081ff848b1e5a1a76a-cache  jit__squeeze-181eb3933ce81d11ad517d8c9953e0c5d717422b1153e0984e0901922d650235-cache  jit__squeeze-50b9b314ea5c77a28ed6062619f2c3daafe6c755f28e05c6bd37f29e52a3ed5c-cache  jit__squeeze-78259bfc1526c6ce4eeef2c410a58ab7c52cb63827f5e1c5ac5a681996d283de-cache  jit__squeeze-79f871db6c834c8126cc990d37adbe01fdb0d8948efe4c876640b29fe6a08900-cache  jit__squeeze-7f24dcc086e77324a4d52e0dd881fbf3a899ceb56fbf1cd8e33cebc476022105-cache  jit__step-0d1958f72cb6c41cf3b5d6f990748b24136ec6be4379d1d78bb4a8c0e6522a34-cache  jit__step-438529fcf4469b466106c57b90a7c0fd72521ab2be4d72ecdd3038cb064ff3b2-cache  jit__step-c0e1e8867c1c88a2a84e432a2fc17382e0f8f0636b377c8dc2b390d9ac0e4c56-cache  jit__threefry_seed-18da47eead6950249a1c7db402ac200113b6d313bbcde89baea155f9a3a53974-cache  jit__threefry_split-051e30eb68e32ff9e3e8e594d0a63939191071cbabff7c620f81bfa4307627a4-cache  jit__threefry_split-366c274cbe121318f21adde0b464b09e4e7bb1ff9b5662b0b07944710345adbc-cache  jit__threefry_split-d68178fee0928002cdd2583c7aff02501d4e6d29e340d6001096a6b4da3e4faa-cache  (+142 more)
data/: differential_test_log.json
(+226 files in other folders)
